--- a/index.html
+++ b/index.html
@@ -80,6 +80,18 @@
             </button>
           </div>
         </div>
+
+        <!-- Spinner -->
+        <div class="d-flex justify-content-center">
+          <div
+            id="loading-spinner"
+            class="spinner-border text-warning d-none"
+            role="status"
+          >
+            <span class="sr-only">Loading...</span>
+          </div>
+        </div>
+
         <!-- Single Lyrics -->
         <h3 id="error-message" class="text-danger"></h3>
         <div id="song-lyrics" class="single-lyrics text-center"></div>
