--- a/index.html
+++ b/index.html
@@ -75,7 +75,11 @@
               class="form-control"
               placeholder="Enter your artist song name"
             />
-            <button onclick="searchSongs()" class="btn btn-success search-btn">
+            <button
+              id="search-button"
+              onclick="searchSongs()"
+              class="btn btn-success search-btn"
+            >
               Search
             </button>
           </div>
